test/fail/invalid_expressions.zn
# ERRORS: 1
# Invalid expressions

func main() {
    var x = * 5
    var valid = 42
    return 0
}
